--- a/pagina/index.html
+++ b/pagina/index.html
@@ -17,13 +17,13 @@
 
         </div>
         <div class="divFooterLi">
-            <li>lista1</li>
-            <li>lista2</li>
-            <li>lista3</li>
-            <li>lista4</li>
-            <li>lista5</li>
-            <li>lista6</li>
-    </div>
+            <li>-lista1-</li>
+            <li>-lista2-</li>
+            <li>-lista3-</li>
+            <li>-lista4-</li>
+            <li>-lista5-</li>
+            <li>-lista6-</li>
+        </div>
     </header>
     <main>
         <div class="separadorHeader">
