--- a/pagina/pages/pag1.html
+++ b/pagina/pages/pag1.html
@@ -5,9 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <div class="header">
+
+        </div>
+        <div class="divFooterLi">
+            <li>-lista1-</li>
+            <li>-lista2-</li>
+            <li>-lista3-</li>
+            <li>-lista4-</li>
+            <li>-lista5-</li>
+            <li>-lista6-</li>
+        </div>
+    </header>
 </body>
 </html>
