--- a/pagina/index.html
+++ b/pagina/index.html
@@ -17,9 +17,9 @@
 
         </div>
         <div class="divFooterLi">
-            <li>-lista1-</li>
-            <li>-lista2-</li>
-            <li>-lista3-</li>
+            <li> <a href="pages/pag1.html"></a> -Pagina 1-</li>
+            <li> <a href="pages/pag2.html"></a> -Página 2-</li>
+            <li> <a href="pages/pag3.html"></a> -Pagina 3-</li>
             <li>-lista4-</li>
             <li>-lista5-</li>
             <li>-lista6-</li>
