--- a/pagina/index.html
+++ b/pagina/index.html
@@ -16,14 +16,14 @@
         <div class="header">
 
         </div>
-        <div class="divFooterLi">
+        <nav class="divFooterLi">
             <li> <a href="pages/pag1.html"></a> -Pagina 1-</li>
             <li> <a href="pages/pag2.html"></a> -Página 2-</li>
             <li> <a href="pages/pag3.html"></a> -Pagina 3-</li>
             <li>-lista4-</li>
             <li>-lista5-</li>
             <li>-lista6-</li>
-        </div>
+        </navs>
     </header>
     <main>
         <div class="separadorHeader">
