--- a/pagina/index.html
+++ b/pagina/index.html
@@ -17,13 +17,15 @@
 
         </div>
         <nav class="divFooterLi">
-            <li> <a href="pages/pag1.html"></a> -Pagina 1-</li>
-            <li> <a href="pages/pag2.html"></a> -Página 2-</li>
-            <li> <a href="pages/pag3.html"></a> -Pagina 3-</li>
-            <li>-lista4-</li>
-            <li>-lista5-</li>
-            <li>-lista6-</li>
-        </navs>
+            <ul>
+                <li> <a href="pages/pag1.html">-Pagina 1-</a></li>
+                <li> <a href="pages/pag2.html">-Página 2-</a></li>
+                <li> <a href="pages/pag3.html">-Pagina 3-</a></li>
+                <li> <a href="">lista 4</a></li>
+                <li> <a href="">lista 5</a></li>
+                <li> <a href="">lista 6</a></li>
+            </ul>            
+        </nav>
     </header>
     <main>
         <div class="separadorHeader">
@@ -53,14 +55,16 @@
         </div>
     </main>
     <footer>
-        <div class="divFooterLi">
-                <li>lista1</li>
-                <li>lista2</li>
-                <li>lista3</li>
-                <li>lista4</li>
-                <li>lista5</li>
-                <li>lista6</li>
-        </div>
+        <nav class="divFooterLi">
+            <ul>
+                <li> <a href="pages/pag1.html">-Pagina 1-</a></li>
+                <li> <a href="pages/pag2.html">-Página 2-</a></li>
+                <li> <a href="pages/pag3.html">-Pagina 3-</a></li>
+                <li>-lista4-</li>
+                <li>-lista5-</li>
+                <li>-lista6-</li>
+            </ul>            
+        </nav>
     </footer>
 </body>
 </html>
