--- a/pagina/pages/pag1.html
+++ b/pagina/pages/pag1.html
@@ -14,14 +14,16 @@
         <div class="header">
 
         </div>
-        <div class="divFooterLi">
-            <li>-lista1-</li>
-            <li>-lista2-</li>
-            <li>-lista3-</li>
-            <li>-lista4-</li>
-            <li>-lista5-</li>
-            <li>-lista6-</li>
-        </div>
+        <nav class="divFooterLi">
+            <ul>
+                <li> <a href="pages/pag1.html">-Pagina 1-</a></li>
+                <li> <a href="pages/pag2.html">-Página 2-</a></li>
+                <li> <a href="pages/pag3.html">-Pagina 3-</a></li>
+                <li>-lista4-</li>
+                <li>-lista5-</li>
+                <li>-lista6-</li>
+            </ul>            
+        </nav>
     </header>
 </body>
 </html>
