--- a/pagina/index.html
+++ b/pagina/index.html
@@ -7,23 +7,23 @@
     <title>My website</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 
 </head>
 <body>
     <header>
         <div class="header">
-
+            <h1> Home</h1>
         </div>
         <nav class="divFooterLi">
             <ul>
                 <li> <a href="pages/pag1.html">-Pagina 1-</a></li>
                 <li> <a href="pages/pag2.html">-Página 2-</a></li>
                 <li> <a href="pages/pag3.html">-Pagina 3-</a></li>
-                <li> <a href="">lista 4</a></li>
+                <!-- <li> <a href="">lista 4</a></li>
                 <li> <a href="">lista 5</a></li>
-                <li> <a href="">lista 6</a></li>
+                <li> <a href="">lista 6</a></li> -->
             </ul>            
         </nav>
     </header>
