--- a/pagina/index.html
+++ b/pagina/index.html
@@ -14,13 +14,13 @@
 <body>
     <header>
         <div class="header">
-            <h1> Home</h1>
+            <h1> Home </h1>
         </div>
         <nav class="divFooterLi">
             <ul>
-                <li> <a href="pages/pag1.html">-Pagina 1-</a></li>
-                <li> <a href="pages/pag2.html">-Página 2-</a></li>
-                <li> <a href="pages/pag3.html">-Pagina 3-</a></li>
+                <li> <a href="pages/pag1.html">- Pagina 1</a></li>
+                <li> <a href="pages/pag2.html">- Página 2</a></li>
+                <li> <a href="pages/pag3.html">- Pagina 3</a></li>
                 <!-- <li> <a href="">lista 4</a></li>
                 <li> <a href="">lista 5</a></li>
                 <li> <a href="">lista 6</a></li> -->
@@ -38,7 +38,7 @@
             <div class="cont2">
                 <h1>En construcción..!</h1>
                 <p>Bienvenidos a mi pagina web... <br><br> En este momento, esta pagina, no hace nada. Pero nuestro equipo de soporte se encuentra
-                    trabajando para que haga algo. <br><br> Gracias por si visita.  </p>
+                    trabajando para que haga algo. <br><br> Gracias por su visita.  </p>
             </div>
             <div class="cont3">
 
@@ -49,6 +49,11 @@
         <div class="contenedor2">
             <div class="cont2-2">
                 <h1>...</h1>
+
+                <label for="nombre">Nombre</label>
+                <input type="text" id="nombre" name="nombre">
+                <button type="submit"> enviar</button>
+
             </div>
             
 
@@ -57,12 +62,12 @@
     <footer>
         <nav class="divFooterLi">
             <ul>
-                <li> <a href="pages/pag1.html">-Pagina 1-</a></li>
-                <li> <a href="pages/pag2.html">-Página 2-</a></li>
-                <li> <a href="pages/pag3.html">-Pagina 3-</a></li>
-                <li>-lista4-</li>
+                <li> <a href="pages/pag1.html">- Pagina 1 </a></li>
+                <li> <a href="pages/pag2.html">- Página 2 </a></li>
+                <li> <a href="pages/pag3.html">- Pagina 3 </a></li>
+                <!-- <li>-lista4-</li>
                 <li>-lista5-</li>
-                <li>-lista6-</li>
+                <li>-lista6-</li> -->
             </ul>            
         </nav>
     </footer>
