--- a/pagina/index.html
+++ b/pagina/index.html
@@ -49,6 +49,16 @@
         <div class="contenedor2">
             <div class="cont2-2">
                 <h1>...</h1>
+                <p>
+                    La depresión crónica que habita por el legado de mis pérdidas, 
+                    da un cause amargo y bello a mis sentimientos, 
+                    a veces como gotas de esperanza, 
+                    pero siempre con tormentas de sufrir. 
+                    En soledad traté por años soportar los desgarros del alma,
+                    pero cuando el campo y mi sangre me mostraron sus melodías 
+                    esparcí como vertientes la melancolía desesperada de mi sentir,
+                    cuando los sonidos se plasmaron el dolor entendió mi llanto, 
+                    la tierra recibió mis semillas, mis lágrimas regaron el sembrado.</p>
 
                 <label for="nombre">Nombre</label>
                 <input type="text" id="nombre" name="nombre">
