--- a/pagina/index.html
+++ b/pagina/index.html
@@ -47,6 +47,9 @@
 
         </div>
         <div class="contenedor2">
+            <div class="cont1">
+                
+            </div>
             <div class="cont2-2">
                 <h1>...</h1>
                 <p>
@@ -63,6 +66,9 @@
                 <label for="nombre">Nombre</label>
                 <input type="text" id="nombre" name="nombre">
                 <button type="submit"> enviar</button>
+
+            </div>
+            <div class="cont3">
 
             </div>
             
